finish get appointments with docs and tests
