# routes/appointments.js
@@ -6,6 +6,7 @@ const validationSchemas = require("./validationSchemas");
 const appointmentsController = require("../controllers/appointments");
 
 
-router.post("/addAppointment",isAuth(["admin","user"]),validate(validationSchemas.addAppointment,"body"),appointmentsController.addAppointment);
-
+router.post("/addAppointment",isAuth(["admin"]),validate(validationSchemas.addAppointment,"body"),appointmentsController.addAppointment);
+router.post("/getAppointments",isAuth(["admin","user"]),validate(validationSchemas.getAppointments,"body"),appointmentsController.getAppointments);
+// TODO::later just ALLOW FOR USERS
 module.exports = router;
