# routes/validationSchemas.js
@@ -93,6 +93,11 @@ const getDoctorDays = Joi.object({
   user_id: Joi.number().required(),
   date: Joi.string().required(),
  });
+ const getAppointments = Joi.object({
+  doctor_id: Joi.number().required(),
+  day: Joi.string().required(),
+  date: Joi.string().required(),
+ });
 const schemas = {
   addUser,
   signin,
@@ -110,7 +115,8 @@ const schemas = {
   toggleBlock,
   addSlot,
   getDoctorDays,
-  addAppointment
+  addAppointment,
+  getAppointments
 }
 
 module.exports = schemas;
